# RBSG

./: RBSG.md  README.md
sglib/: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  run_test_data.sh  verify.sh
sglib/include/: sglib_mod.f90
sglib/scripts/: generate_test_data.py  plot_results.py  run_demo.sh
sglib/src/: main_test.f90  sg_coeff.f90  sg_filter.f90  test_sg_filter_data.f90
